# db-imputation

./: .gitmodules  CMakeLists.txt  MICE_inventory.sql  MICE_inventory_lda.sql  README.md  Triple.sql  add_data.sql  library.c  sql.sql
benchmarks/: BENCH_flights.sql  BENCH_retailer.sql  test_cofactor_performance.sql
custom_datatype/: CMakeLists.txt  library.c
driver/: Driver.sql  driver_query_generation.sql  driver_updated.sql
duckdb/: CMakeLists.txt  main.cpp  partition.cpp  partition.h
duckdb/ML/: Regression.cpp  Regression.h  Regression_predict.cpp  Regression_predict.h  lda.cpp  lda.h  lda_impute.cpp  lda_impute.h  utils.cpp  utils.h
duckdb/experiments/: column_scalability.cpp  column_scalability.h  factorized_imputation_flight.cpp  factorized_imputation_flight.h  factorized_imputation_retailer.cpp  factorized_imputation_retailer.h  flight_baseline.cpp  flight_baseline.h  flight_partition.cpp  flight_partition.h  flight_partition_2.cpp  partition.cpp  train_flight.cpp  train_flight.h  train_retailer.cpp  train_retailer.h
duckdb/imputation/ML/: lda_impute.cpp  regression.cpp  regression_predict.cpp
duckdb/imputation/include/triple/sum/: sum_nb.h  sum_state.h
duckdb/imputation/triple/: mul.cpp  sub.cpp
duckdb/imputation/triple/sum/: sum.cpp  sum_nb.cpp  sum_state.cpp
duckdb/lib/: test.cpp
duckdb/lib/libduckdb/: CMakeLists.txt
duckdb/tests/: test_ML.cpp  test_lda.cpp  test_lift.cpp  test_mul.cpp  test_sum.cpp
duckdb/triple/: Custom_lift.cpp  Custom_lift.h  From_duckdb.cpp  From_duckdb.h  Lift.cpp  Lift.h  Sum_no_lift.cpp  Sum_no_lift.h  Triple_mul.cpp  Triple_mul.h  Triple_sub.cpp  Triple_sub.h  Triple_sum.cpp  Triple_sum.h  helper.cpp  helper.h
dynamic_size/: library.c  library.h  sql.sql
dynamic_size/pgMICE/: Driver.sql  Triple.sql  experiments.sql
experiments/col_numbers/: 1col.sql  4col.sql
experiments/multiple tables/: factorized_flights.sql  factorized_retailer.sql
experiments/quality/: air_quality.py  create_table_air_quality.sql  flight.py  quality_hyper.py
experiments/single table/: MICE_partitioned.sql  MICE_partitioned_air_quality.sql  MICE_partitioned_flight.sql  MICE_partitioned_retailer.sql  MICE_reverse_partitioned_flight.sql  mice_baseline.sql  mice_baseline_airquality.sql  mice_baseline_flight.sql  mice_baseline_retailer.sql  mice_madlib.sql  systemds.dml
experiments/single table/other systems/: mice_madlib.sql  mindsdb.py  mindsdb_create_air_quality.sql  mindsdb_create_flight.sql  mindsdb_create_retailer.sql  systemds.dml
experiments/train/: create_flight.py  create_retailer.py  train_experiment_retailer.sql  train_experiments_flight.sql
experiments/update_opt/: MICE_partitioned_no_drop.sql
experiments_postgres/col_numbers/: 2col.sql
experiments_postgres/multiple tables/: factorized_flights.sql
experiments_postgres/single table/: MICE_partitioned_air_quality.sql  MICE_partitioned_flight.sql  MICE_partitioned_retailer.sql  mice_baseline_flight.sql
experiments_postgres/single table/other systems/: Univar-Stats.dml
experiments_postgres/train/: train_experiments_flight.sql
experiments_postgres/update_opt/: MICE_partitioned_no_commit.sql  MICE_partitioned_no_hot.sql
make_datasets/: flight_denormalized.py  flight_normalized.py  make_air_quality.py  retailer_denormalized.py  retailer_normalized.py
make_datasets/postgres/: import_air_quality.sql  import_flight_denorm.sql  import_flight_norm.sql  import_retailer_denorm.sql  import_retailer_norm.sql
misc/: Triple.sql  preprocess.ipynb
misc/benchmarks/: test_datatype.sql
misc/driver/: Driver_join.sql
misc/python_experiments/: SKLearn_bgd.py  bgd_classifier.py  mice_optimized.py  multiple_chains_experiment.py  run_employer.py  run_experiments.py  soil.py  soil_dataset.py  unoptimized_mice.py
misc/python_experiments/load_dataset/: dataset_utils.py  flight_delay.py  load_flights.py
other_systems/clickhouse/: script.py  setup.txt
other_systems/mice_madlib/: import_data.sql  make_dataset.py  mice_madlib.sql  setup.txt
other_systems/mindsdb_script/: mindsdb_clickhouse.py  mindsdb_postgres.py
other_systems/systemds/: make_dataset.py  mice.dml  setup.txt
postgres/: CMakeLists.txt
postgres/driver/: driver_baseline.sql  driver_flights.sql  driver_incremental_classifier.sql  naive_bayes.sql  qda.sql  train_experiment.sql
postgres/include/: cofactor.h  lda.h  matrix.h  nb_aggregates.h  relation.h
postgres/sql/: create_MICE.sql  create_MICE_incremental.sql  create_MICE_incremental_partitioned.sql  create_MICE_subtract.sql  create_ML.sql  create_UDFs.sh  create_cofactor_type.sql  create_relation_type.sql
postgres/src/: cofactor.c  datatype.c  gradient_descent.c  lda.c  matrix.c  naive_bayes.c  qda.c  relation.c  serializer.c
postgres/test/sql/: test_relation_type.sql
postgres/test/src/: test_serializer.c
prev_datatype/baseline/: library.c
prev_datatype/v1/: CMakeLists.txt
python_experiments/: SKLearn_bgd.py  SKLearn_sgd.py  bgd_classifier.py  bgd_linear_regression.py  dataset_utils.py  flight_delay.py  load_inventory.py  load_sf_bikeshare.py  logger.py  lol.py  main.py  mice_optimized.py  optimized_model.py  run_experiments.py  test_classifier.py  unoptimized_mice.py  used_cars.py
python_experiments/load_dataset/: load_favorita.py  load_flights.py  load_inventory.py  load_sf_bikeshare.py
scripts/: extract_info_postgres.py  madlib_script.sh  postgres_script.sh  systemds_script.sh
scripts/logs/: quality.csv  systemds_log_flight.txt  systemds_log_retailer.txt
scripts/logs/flight_postgres/: postgres_0.05_flight_baseline.txt  postgres_0.05_flight_partitioned.txt  postgres_0.05_flight_shared.txt  postgres_0.1_flight_baseline.txt  postgres_0.1_flight_partitioned.txt  postgres_0.1_flight_shared.txt  postgres_0.2_flight_baseline.txt  postgres_0.2_flight_partitioned.txt  postgres_0.2_flight_shared.txt  postgres_0.4_flight_baseline.txt  postgres_0.4_flight_partitioned.txt  postgres_0.4_flight_shared.txt  postgres_0.6_flight_baseline.txt  postgres_0.6_flight_partitioned.txt  postgres_0.6_flight_shared.txt  (+3 more)
v1/: changelog.txt  library.c  sql.sql
(+18 files in other folders)
